--- a/src/calculator/styles.css
+++ b/src/calculator/styles.css
@@ -1,3 +1,7 @@
+* {
+     -fx-font-family: "Roboto Mono", "Consolas", "Arial Narrow", sans-serif;
+}
+
 VBox {
      -fx-background-color: #000;
      -fx-alignment: center;
@@ -67,3 +71,23 @@ VBox {
     -fx-background-color: rgba(254, 149, 5, 0.8);
 }
 
+/* Alert Box Styling */
+.content {
+    -fx-font-size: 16px;
+    -fx-text-fill: black;
+}
+
+.dialog-pane .button {
+    -fx-background-color: #D32F2F;
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+    -fx-background-radius: 5px;
+}
+
+.dialog-pane .button:hover {
+    -fx-background-color: #B71C1C;
+}
+
+.dialog-pane:top.error {
+    -fx-background-color: #ffcccc;
+}
